# nlauncher

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  advice.md  flake.nix
.amazonq/cli-todo-lists/: 1763071178890.json  1763107221176.json  1763484313228.json
data/: github.niahex.nlauncher.gschema.xml
nix/: README.md  home-manager.nix
src/: applications.rs  cache.rs  calculator.rs  clipboard.rs  events.rs  fuzzy.rs  launcher.rs  lib.rs  main.rs  process.rs  scroll.rs  state.rs  style.css  styles.rs  theme.rs  ui.rs  vault.rs
