[package]
name = "nlauncher"
version = "0.1.0"
edition = "2021"
include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.216.1", features = ["wayland"] }
freedesktop-desktop-entry = "0.5.0"
freedesktop-icons = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
nucleo = "0.3.0"
numbat = "1.10.0"

[workspace]