[package]
name = "nlauncher"
version = "0.1.0"
edition = "2021"
include = ["data/**/*", "src/**/*", "Cargo.toml"]

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
glib = { version = "0.20.12" }
gio = { version = "0.20.12" }
gtk4-layer-shell = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
dirs = "6.0.0"
socket2 = "0.6.0"
walkdir = "2.5.0"
log = "0.4.22"
env_logger = "0.11.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true